--- a/src/pages/learn/grid/style.css
+++ b/src/pages/learn/grid/style.css
@@ -3,3 +3,15 @@
     justify-content: center;
     align-items: center;
 }
+
+.learnFlex_a{
+    margin: 5px 0 5px 0;
+}
+.learnFlex_a a{
+    color: #000;
+}
+.learnFlex_a a:hover{
+    text-shadow: 1px 1px 2px #000;
+    cursor: pointer;
+    color: red;
+}
